call-center/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Administrative</fullName>
        <description>Administrative process to govern cases concerning Guarantor change request</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General</fullName>
        <description>Process used to manage general case records</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Investigating</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal Cases Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Investigating</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Manual Case Creation</fullName>
        <description>Covers Billing, Payor, Quality of Care, Sirono Review and General Record Types</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Update</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Asset_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The asset Id of the case</description>
        <label>Asset ID</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>CloudCoOp representative</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Assigned To)</relationshipLabel>
        <relationshipName>InternalCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author_Id__c</fullName>
        <label>Author ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_CaseClaim__c</fullName>
        <label>Caller- Case#/Claim#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Contact_Fax__c</fullName>
        <label>Caller- Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Caller_Contact_Number__c</fullName>
        <label>Caller- Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Callers_Name__c</fullName>
        <label>Callers Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Claim__c</fullName>
        <description>This is entered on Payor case types.  It is the external Case or Claim # that the guarantor has open.</description>
        <label>Case #/Claim #</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_ETA__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Group_For_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge Group for Discount</label>
        <referenceTo>Charge_Group__c</referenceTo>
        <relationshipLabel>Cases (Charge Group for Discount)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Group_Ids__c</fullName>
        <label>Charge Group ID(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Claim #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chargegroup Bad Debt/inactive</fullName>
                </value>
                <value>
                    <fullName>Closed – Success</fullName>
                </value>
                <value>
                    <fullName>Closed – Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Closed – Case not necessary</fullName>
                </value>
                <value>
                    <fullName>Closed - Automated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Event__c</fullName>
        <label>Contact event</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <description>Created time and date</description>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By_Id__c</fullName>
        <description>Star account Number</description>
        <label>Created By ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cred_Card_Last_4_Check_Number__c</fullName>
        <label>Credit Card (last 4)/ Check Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Bankruptcy_Filing__c</fullName>
        <label>Date of Bankruptcy Filing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Death__c</fullName>
        <label>Date Of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible_Discount__c</fullName>
        <label>Eligible Discount %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(E) 80%</fullName>
                </value>
                <value>
                    <fullName>(D) 70%</fullName>
                </value>
                <value>
                    <fullName>(C) 60%</fullName>
                </value>
                <value>
                    <fullName>(B) 50%</fullName>
                </value>
                <value>
                    <fullName>(A) 40%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Encounter</label>
        <referenceTo>Encounter__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entry_Time__c</fullName>
        <description>Time stamp for entry of record</description>
        <label>Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Est_Annual_Gross_Family_Income__c</fullName>
        <label>Est. annual gross family income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-23,540</fullName>
                </value>
                <value>
                    <fullName>23,541-31,860</fullName>
                </value>
                <value>
                    <fullName>31,861-40,180</fullName>
                </value>
                <value>
                    <fullName>40,181-48,500</fullName>
                </value>
                <value>
                    <fullName>48,501-56,820</fullName>
                </value>
                <value>
                    <fullName>56,821-65,140</fullName>
                </value>
                <value>
                    <fullName>65,141-73,460</fullName>
                </value>
                <value>
                    <fullName>73,461-81,780</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Income_Measure_3_Or_12_Months__c</fullName>
        <label>Est. income measure (3 or 12 months)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 months</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Monthly_Gross_Family_Income__c</fullName>
        <label>Est. monthly gross family income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-1,962</fullName>
                </value>
                <value>
                    <fullName>1,963-2,655</fullName>
                </value>
                <value>
                    <fullName>2,656-3,348</fullName>
                </value>
                <value>
                    <fullName>3,349-4,042</fullName>
                </value>
                <value>
                    <fullName>4,043-4,735</fullName>
                </value>
                <value>
                    <fullName>4,736-5,428</fullName>
                </value>
                <value>
                    <fullName>5,429-6,122</fullName>
                </value>
                <value>
                    <fullName>6,123-8,178</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Author__c</fullName>
        <description>Who was the creator of record</description>
        <label>External Author</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Form_To_Be_Mailed__c</fullName>
        <label>Form to be Mailed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HIPAA consent</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Charity Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_DOB__c</fullName>
        <formula>Guarantor_Information__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guarantor DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor_Id__c</fullName>
        <formula>Guarantor_Information__r.Guarantor_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guarantor Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantor_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Guarantor record.  Set via the manual cases flow to be the first chargegroup&apos;s guarantor.</description>
        <label>Guarantor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Guarantor)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_CSS_Comments__c</fullName>
        <label>Has CSS Comments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Comments_Unread__c</fullName>
        <label>Has Comments Unread</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Equals Sirono Ticket number</description>
        <externalId>true</externalId>
        <label>ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Informed_Caller_To_Mail_Death_Certificat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informed caller to mail death cert.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <label>Is Closed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Escalated__c</fullName>
        <label>Is Escalated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Id__c</fullName>
        <label>Last Modified By ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_To_Item__c</fullName>
        <inlineHelpText>Copy in the url link to where the problem resides.</inlineHelpText>
        <label>Link to item</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mail_In_Proof_Of_Bankruptcy_And_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail in Proof of Bankruptcy and Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_With_Guarantor_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge with- Guarantor ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Merge with- Guarantor ID)</relationshipLabel>
        <relationshipName>Guarantor_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_At__c</fullName>
        <description>What time and date Record was modified</description>
        <label>Modified At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_City__c</fullName>
        <label>New- City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Country__c</fullName>
        <label>New- Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_DOB__c</fullName>
        <inlineHelpText>Date of Birth</inlineHelpText>
        <label>New- DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Demographic_Information__c</fullName>
        <label>New Demographic Information</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_First_Name__c</fullName>
        <label>New- First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Home_Phone__c</fullName>
        <label>New- Home phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Last_Name__c</fullName>
        <label>New- Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Middle_Name__c</fullName>
        <label>New- Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Mobile_Phone__c</fullName>
        <label>New- Mobile phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_PayorInsurance__c</fullName>
        <label>New Payor/Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Social_Security_Number__c</fullName>
        <label>New- Social Security Number</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>New_State__c</fullName>
        <label>New- State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Street_Address__c</fullName>
        <label>New- Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Suffix__c</fullName>
        <label>New- Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Work_Phone__c</fullName>
        <label>New- Work phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Zipcode__c</fullName>
        <label>New- Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Type__c</fullName>
        <label>Note Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Assign_To__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to notify Assign To when case ownership changes.</inlineHelpText>
        <label>Notify Assign To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_People_In_Household__c</fullName>
        <label>Number of people in household</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Charge Group Coverage Junctions</fullName>
                </value>
                <value>
                    <fullName>Charge Groups</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Coverages</fullName>
                </value>
                <value>
                    <fullName>Encounters</fullName>
                </value>
                <value>
                    <fullName>Invoices</fullName>
                </value>
                <value>
                    <fullName>Locations</fullName>
                </value>
                <value>
                    <fullName>Patient Coverage Junctions</fullName>
                </value>
                <value>
                    <fullName>Payment/Adjustments</fullName>
                </value>
                <value>
                    <fullName>Payment Arrangements</fullName>
                </value>
                <value>
                    <fullName>Payment Methods</fullName>
                </value>
                <value>
                    <fullName>Payment Plans</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Payors</fullName>
                </value>
                <value>
                    <fullName>Providers</fullName>
                </value>
                <value>
                    <fullName>Service Rollups</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Statements</fullName>
                </value>
                <value>
                    <fullName>Transactions</fullName>
                </value>
                <value>
                    <fullName>Transaction Types</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin_Code__c</fullName>
        <label>Origin Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currently not used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <label>Owner ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <formula>Patient__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_MRN__c</fullName>
        <formula>Patient__r.Medical_Record_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient MRN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Patient record.  Set via the manual cases flow to be the first chargegroup&apos;s patient.</description>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Patient Information)</relationshipLabel>
        <relationshipName>Cases_P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Delivered__c</fullName>
        <label>Payment Delivered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Id__c</fullName>
        <label>Payment Plan  ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payor__c</fullName>
        <label>Payor</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_To_Contact__c</fullName>
        <label>Person To Contact</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>Severity represents &quot;how bad a case is.&quot; For example, a case that causes the program to crash would be considered Critical severity, while a small spelling error might be low severity.</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Priority</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                    <default>true</default>
                    <label>Minor</label>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_Id__c</fullName>
        <label>Subscriber ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <label>Subscriber Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Text__c</fullName>
        <description>Summary of case</description>
        <label>Summary Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supplied_Company__c</fullName>
        <label>Supplied Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Email__c</fullName>
        <label>Supplied Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Name__c</fullName>
        <label>Supplied Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Phone__c</fullName>
        <label>Supplied Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>System_Mod_Stamp__c</fullName>
        <label>System Mod stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Worked_Mins__c</fullName>
        <label>Time Worked (Mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Code__c</fullName>
        <label>Transaction Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Author_Id__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Guarantor_Information__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Automated_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Automated Cases</label>
        <queue>Automated_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Demographic_Update</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Guarantor_Information__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>Demographic Update</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Demographic Update</label>
    </listViews>
    <listViews>
        <fullName>Encounter_Needed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Closed__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>Encounter Needed</label>
    </listViews>
    <listViews>
        <fullName>Hospital_Staff_Billing_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue: Hospital Staff (Billing)</label>
        <queue>Hospital_Staff_Billing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hospital_Staff_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue: Hospital Staff</label>
        <queue>Hospital_Staff</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Imported_from_Redmine</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Note_Type__c</field>
            <operation>equals</operation>
            <value>Imported from Redmine</value>
        </filters>
        <label>Imported from Redmine</label>
    </listViews>
    <listViews>
        <fullName>Insurance_Update</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Guarantor_Information__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>New Insurance</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Insurance Update</label>
    </listViews>
</CustomObject>